# fundeb-mvp

./: .gitignore  DEPLOY.md  README.md  SUBMISSAO.md  app.py  calculadora.py  chat_agent.py  pyproject.toml  requirements.txt  test_calculadora.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.streamlit/: secrets.toml.example
dados/: municipios.json  ponderadores.json
docs/: apresentacao-premio-sof.md  bmm-workflow-status.yaml  municipios-ponderadores-nse-drec.csv  prd.md
docs/sprint-artifacts/: product-brief-premio-sof.md
scripts/: coletar_dados_completos.py
scripts/cache/: populacao_2024.json
