[project]
name = "fundeb-facil-express"
version = "0.1.0"
description = "Sistema Inteligente para Projeção de Complementações FUNDEB (VAAT/VAAF)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "anthropic>=0.40.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
